# crispy-guacamole

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS
notebooks/: exploratory_analysis.ipynb
src/crispy_guacamole/: __init__.py  cli.py
tests/: test_cli.py
