[tool.poetry]
name = "crispy-guacamole"
version = "0.1.0"
description = "A End2End ML project showcasing many components needed to bring your code to production"
authors = ["jm-glowienke <jmglowienke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
typer = "^0"
fastapi = "^0.103.1"
pydantic = "^2.3.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
nltk = "^3.8.1"
wordcloud = "^1.9.2"



[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.7.0"
ruff = "^0.0.287"
pre-commit = "^3.4.0"
ipykernel = "^6.25.2"
isort = "^5.12.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
crispy-guacamole = "crispy_guacamole.cli:app"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.mccabe]
max-complexity = 10

[tool.black]
line-length = 110
force-exclude = "data"
